# violet

./: .editorconfig  Cargo.toml  README.md
scripts/: README.md  download_euroc.py
src/: all.rs  camera.rs  camera_pinhole.rs  camera_setup.rs  debug.rs  detector.rs  event_loop.rs  frame.rs  image.rs  input.rs  kalman_filter.rs  main.rs  math.rs  optical_flow.rs  parameters.rs  pyramid.rs  stationary.rs  track.rs  tracker.rs  types.rs  util.rs  video.rs  vio.rs  vio_init.rs  visual_update.rs  visualize.rs  visualize_3d.rs
