[package]
name = "violet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling.
anyhow = "1.0"
# Command line argument parsing.
clap = { version = "3", features = ["derive"] }
# More generic global variables.
lazy_static = "1.4"
# Logging facade.
log = "0.4"
# Logging implementation.
env_logger = "0.9"
# 3d graphics engine.
kiss3d = "0.34"
# Linear algebra library similar to Eigen (C++).
nalgebra = "0.30"
# Random number generation.
rand = "0.8"
# Deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Windowing library, including input handling.
winit = "0.26"
# Put pixel data in a (winit) window.
softbuffer = "0.1"

[profile.dev]
# `nalgebra` is too slow to run without optimizations. Eigen of C++ is not any different.
opt-level = 3
